--- a/views/index.ejs
+++ b/views/index.ejs
@@ -48,10 +48,10 @@
         <h3 class="float-md-start mb-0">Portfolio</h3>
         <nav class="nav nav-masthead justify-content-center float-md-end">
           <a class="nav-link" href="/home">Home</a>
-          <a class="nav-link" href="#">About</a>
-          <a class="nav-link" href="#">Contact</a>
+          <a class="nav-link" href="/about">About</a>
+          <a class="nav-link" href="/contact">Contact</a>
           <% if (loggedIn) { %>
-            <a class="btn btn-sm btn-danger" href="/logout">Logout</a>
+            <a class="btn btn-sm btn-danger" id="logout" href="/logout">Logout</a>
             <% } %>
 
               <% if (!loggedIn) { %>
@@ -63,24 +63,14 @@
     </header>
 
     <main class="px-3">
-      <h1 class="lead mt-5">This is my Portfolio Website</h1>
-      <p>- กำหนดเป้าหมาย (Target) ทำเว็บมาเพื่อจุดประสงค์อะไร เพื่อจะได้เตรียมข้อมูลและวางแผนเจาะจงและตรงกับกลุ่มเป้าหมายมากที่สุด</p>
-      <p>- เนื้อหาดีมีประโยชน์ (Useful) ควรมีเนื้อหาที่ครบถ้วนสมบูรณ์และมีการปรับปรุงให้ทันต่อสถานการณ์ เพื่อให้ผู้ชมเกิดความสนใจและกลับเข้ามาใช้บริการอีกในอนาคต</p>
-      <p>- หาจุดเด่น (Highlights) เนื่องจากเป้าหมายที่ไม่เหมือนกัน ถ้าเว็บไซต์ของคุณเน้นไปทางธุรกิจ คุณต้องหาจุดเด่นและความได้เปรียบให้เหนือกว่าคู่แข่งขันเพราะเว็บไซต์เปรียบเสมือนหน้าตาของธุรกิจของเรา</p>
-      <p>- ความเรียบง่าย (Plainness) ควรออกแบบเรียบง่าย อ่านสบายตา ไม่รู้สึกสับสนกับข้อมูล ใช้งานง่าย (User Friendly)</p>
-      <p>- มีความเป็นเอกลักษณ์ (Identity) มีรูปแบบสะท้อนถึงเอกลักษณ์และลักษณะขององค์กรนั้น ๆ ได้เช่น สี ตัวอักษร รูปภาพ เป็นต้น</p>
-      <p>- มีระบบเนวิเกชั่นที่ดี (Navigation) คือ ระบบนำทางในเว็บไซต์ เพื่อให้ผู้ชมสามารถเลือกไปใช้บริการเดินทางในจุดสนใจในเว็บไซต์ได้อย่างสะดวก</p>
-      <p>- ลดขนาดไฟล์รูปภาพ (Redure) เพื่อให้สามารถเปิดหน้าเพจอย่างรวดเร็ว ควรมีการลดขนาดไฟล์</p>
-      <p>- ติดต่อได้สะดวก (Contact) โลโก้, ชื่อการค้า, เบอร์โทรศัพท์ รวมไปถึงข้อมูลที่ผู้ใช้ (Clients) สามารถติดต่อได้สะดวก เช่น แผนที่, อีเมลล์ เป็นต้น</p>
-      <p>- หมั่นปรับปรุงเว็บไซต์ให้มีความเคลื่อนไหว (Update) ทันสมัยอยู่เสมอ ซึ่งจะช่วยในการติดอันดับ Top ของเว็บ Search Engine</p>
+      <h1 class="mt-3 mb-3">This is my Portfolio Website</h1>
+      <p>Please login to view details.</p>
     </main>
 
     <footer class="mt-auto text-white-50">
-      <p>Songchai Panich <a href="#"></a></p>
+      <p>© 2023 Copyright By <a href="/">Songchai Panich</a></p>
     </footer>
   </div>
-
-
 
 </body>
 
