--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -45,7 +45,7 @@
   <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
     <header class="mb-auto">
       <div>
-        <h3 class="float-md-start mb-0">Portfolio</h3>
+        <h3 class="float-md-start mb-0">tmtmteamtmtm</h3>
         <nav class="nav nav-masthead justify-content-center float-md-end">
           <a class="nav-link" href="/home">Home</a>
           <a class="nav-link" href="/about">About</a>
@@ -63,7 +63,11 @@
     </header>
 
     <main class="px-3">
-      <h1>Contact</h1>
+      <h1 class="mb-5">Contact</h1>
+      <p>Phone : 0620549696
+      <p>Email : songchai.5353@gmail.com</p>
+      <p>Address : Bangkok, Thailand</p>
+      <p>Github : tmtmteamtmtm</p>
     </main>
 
     <footer class="mt-auto text-white-50">
