--- a/views/home.ejs
+++ b/views/home.ejs
@@ -40,18 +40,18 @@
   <link href="/css/cover.css" rel="stylesheet">
 </head>
 
-<body class="d-flex h-100 text-center text-white bg-dark">
+<body class="d-flex text-center text-white bg-dark">
 
   <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
     <header class="mb-auto">
       <div>
-        <h3 class="float-md-start mb-0">Portfolio</h3>
+        <h3 class="float-md-start mb-0">tmtmteamtmtm</h3>
         <nav class="nav nav-masthead justify-content-center float-md-end">
           <a class="nav-link active" aria-current="page" href="/home">Home</a>
           <a class="nav-link" href="/about">About</a>
           <a class="nav-link" href="/contact">Contact</a>
           <% if (loggedIn) { %>
-            <a class="btn btn-sm btn-danger gap-2" href="/logout">Logout</a>
+            <a class="btn btn-sm btn-danger" href="/logout">Logout</a>
             <% } %>
 
               <% if (!loggedIn) { %>
